// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContainerView Component UI Render Test should render with the ContainerView component in column 1`] = `
<div
  className="column"
  style={
    Object {
      "width": "calc(20% - 5px)",
    }
  }
>
  <View
    key=".0"
  >
    <div
      visible="true"
    />
  </View>
</div>
`;

exports[`ContainerView Component UI Render Test should render with the ContainerView component in row 1`] = `
<div
  className="row"
  style={
    Object {
      "height": "calc(50% - 5px)",
    }
  }
>
  <View
    key=".0"
  >
    <div
      visible="true"
    />
  </View>
</div>
`;
